# blog

./: README.md  ps.md  style.md
blog/lang-json-dump/cpp/: binary-search-last-exclusive.json  binary-search-last.json  class-implementation-qualified-names.json  constructor-no-return-type.json  reverse-iterator-indexing.json  self-copy-member-initialiser-list.json
blog/lang-json-dump/css/: outline.json
blog/lang-json-dump/html/: text-fragment.json
blog/lang-json-dump/js/: sort-lexicographic.json
blog/lang-json-dump/rust/: ref-keyword.json
blog/lang-json-dump/shell/: background-fg.json  bang-bang.json  bang-end-string.json  (+23 more)
cpp/: binary-search-last.md  binary-search-range.md  constructor-no-return-type.md
css/: outline.md
html/: text-fragment.md
js/: sort-lexicographic.md
parser/: Cargo.toml  README.md  json_schema.md
parser/src/: lib.rs  main.rs  parse.rs
parser/src/parse/: dump_file.rs  html_element.rs  paths.rs  to_html.rs
rust/: ref-keyword.md
shell/: background-fg.md  bang-bang.md  do-not-store-exit-status.md  find-exec.md  folder-change-function.md  git-reset.md  git-upstream.md  glob-var-order.md  handy-utilities.md  history.md  installed-utilities.md  nested-double-quoting.md  newline-at-end.md  no-export-function-posix.md  no-multiline-func.md  null-glob.md  pushd-popq.md  tmux.md  zsh-colons.md  zsh-login.md
website/: index.html  package-lock.json  package.json  react-router.config.js  vite.config.js
website/public/: blog  blog-lang.json
website/src/: App.jsx  NavBar.jsx  blog-lang.json  blogToURL.js  parser.jsx  unpack.js
(+56 files in other folders)
